# wolf_wbid

./: CMakeLists.txt  README.md  package.xml
include/wolf_wbid/: cartesian_trajectory.h  id_problem.h  id_problem_ros.h  quadruped_robot.h  quadruped_robot_rbdl.h  task_interface.h
include/wolf_wbid/core/: cartesian_trajectory.h  id_problem.h  quadruped_robot.h  quadruped_robot_rbdl.h  task_interface.h
include/wolf_wbid/ros/: cartesian.h  com.h  handler.h  momentum.h  postural.h  wrench.h
include/wolf_wbid/ros2/: cartesian.h  com.h  handler.h  momentum.h  postural.h  wrench.h
include/wolf_wbid/task_ros2_wrappers/: cartesian.h  com.h  handler.h  momentum.h  postural.h  wrench.h
include/wolf_wbid/task_ros_wrappers/: cartesian.h  com.h  handler.h  momentum.h  postural.h  wrench.h
include/wolf_wbid/wbid/: id_variables.h
include/wolf_wbid/wbid/constraints/: base_accel_z_constraint.h  constraint_base.h  contact_force_bounds_constraint.h  dynamics_equality_constraint.h  floating_base_accel_constraint.h  friction_cone_constraint.h  friction_cones_constraint.h  torque_limits_constraint.h
include/wolf_wbid/wbid/qp/: bounds_builder.h  eiquadprog_solver.h  qp_builder_lsq.h  qp_problem.h  qp_solver.h  qp_solver_factory.h  qp_stack.h  qpoases_solver.h
include/wolf_wbid/wbid/tasks/: aggregated_task_lsq.h  angular_momentum_task.h  cartesian_task.h  com_task.h  minimize_variable_task.h  postural_task.h  task_base.h  task_lsq.h  wrench_task.h
launch/: wolf_controller_bringup.launch  wolf_controller_spawn.launch
launch/include/: wolf_controller_ns.xml
src/: cartesian_trajectory.cpp  id_problem.cpp  id_problem_ros.cpp  quadruped_robot.cpp  quadruped_robot_rbdl.cpp  task_interface.cpp
src/core/: cartesian_trajectory.cpp  id_problem.cpp  quadruped_robot_rbdl.cpp  task_interface.cpp
src/ros/: cartesian.cpp  com.cpp  handler.cpp  momentum.cpp  postural.cpp  wrench.cpp
src/ros2/: cartesian.cpp  com.cpp  handler.cpp  momentum.cpp  postural.cpp  wrench.cpp
src/task_ros2_wrappers/: cartesian.cpp  com.cpp  handler.cpp  momentum.cpp  postural.cpp  wrench.cpp
src/task_ros_wrappers/: cartesian.cpp  com.cpp  handler.cpp  momentum.cpp  postural.cpp  wrench.cpp
src/wbid/: id_variables.cpp
src/wbid/constraints/: base_accel_z_constraint.cpp  contact_force_bounds_constraint.cpp  dynamics_equality_constraint.cpp  friction_cone_constraint.cpp  friction_cones_constraint.cpp  torque_limits_constraint.cpp
src/wbid/qp/: bounds_builder.cpp  eiquadprog_solver.cpp  qp_builder_lsq.cpp  qp_solver_factory.cpp  qp_stack.cpp  qpoases_solver.cpp
src/wbid/tasks/: aggregated_task_lsq.cpp  angular_momentum_task.cpp  cartesian_task.cpp  com_task.cpp  minimize_variable_task.cpp  postural_task.cpp  task_base.cpp  wrench_task.cpp
test/: robot_dummy.cpp  robot_dummy.h  test_common_utils.h  test_controller.cpp  test_controller.test  test_id_problem.cpp  test_id_problem.test  test_pnpoly.cpp  test_state_estimation.cpp  test_trajectory.cpp
