<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_wbid</name>
  <version>0.1.5</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots:
  This package contains the utilities to implement the whole-body inverse dynamics problem and its wrappers for ROS and ROS2.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>realtime_tools</depend>
  <depend>rt_logger</depend>
  <depend>wolf_msgs</depend>
  <depend>wolf_controller_utils</depend>

</package>
