<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_wbid</name>
  <version>0.1.5</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots:
  This package contains the utilities to implement the whole-body inverse dynamics problem and its wrappers for ROS and ROS2.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>realtime_tools</depend>
  <depend>wolf_msgs</depend>
  <depend>wolf_controller_utils</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>

</package>
